# distributed-aggregation-query

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  task.md
scripts/: buildImages.sh  compute.sh  computeAZ.sh  computeDocker.sh  config.sh  deleteAZres.sh  pushImgToAz.sh  testWorkload.sh  upload.sh
src/: Api.cpp  Api.h  AzureBlobClient.cpp  AzureBlobClient.h  Client.cpp  Client.h  CurlEasyPtr.h  Server.cpp  Server.h  Timer.cpp  Timer.h  Worker.cpp  Worker.h  coordinator.cpp  runWorker.cpp
